// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDataloaderService load should load many 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
          "321",
        ],
      },
    },
  },
]
`;

exports[`EventDataloaderService load should load one 1`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "123",
        ],
      },
    },
  },
]
`;

exports[`EventDataloaderService should prime 1`] = `
[
  "123",
  {},
]
`;
